--- a/src/styles/css/home.css
+++ b/src/styles/css/home.css
@@ -34,7 +34,6 @@ section#home > div#listeLogements {
 /* line 34, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
 section#home > div#listeLogements div.cardLogement {
   width: 29%;
-  max-width: 340px;
   min-width: 255px;
   margin: auto;
   max-height: 340px;
@@ -45,22 +44,38 @@ section#home > div#listeLogements div.cardLogement {
   background-position-y: 125px;
   background-repeat: no-repeat;
   position: relative;
+  overflow: hidden;
 }
 
-/* line 48, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
+/* line 49, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
 section#home > div#listeLogements div.cardLogement:hover {
   cursor: pointer;
 }
 
 /* line 52, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
+section#home > div#listeLogements div.cardLogement:hover img {
+  width: 103%;
+  height: 103%;
+}
+
+/* line 58, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
+section#home > div#listeLogements div.cardLogement img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* line 65, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/home.scss */
 section#home > div#listeLogements div.cardLogement a {
   margin: 0;
   padding: 20px;
   color: #fff;
   position: absolute;
   bottom: 0;
-  max-width: 60%;
   font-size: 18px;
+  max-width: 60%;
+  text-shadow: 2px 2px 2px black;
 }
 
 /*# sourceMappingURL=home.css.map */
