--- a/src/styles/sass/home.scss
+++ b/src/styles/sass/home.scss
@@ -33,7 +33,6 @@ section#home {
 
     div.cardLogement{
       width: 29%;
-      max-width: 340px;
       min-width: 255px;
       margin: auto;
       max-height: 340px;
@@ -44,9 +43,23 @@ section#home {
       background-position-y: 125px;
       background-repeat: no-repeat;
       position: relative;
+      overflow: hidden;
+
 
       &:hover{
         cursor: pointer;
+
+        img{
+          width: 103%;
+          height: 103%;
+        }
+      }
+
+      img{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
 
       a{
@@ -55,8 +68,9 @@ section#home {
         color: $white;
         position: absolute;
         bottom: 0;
-        max-width: 60%;
         font-size: 18px;
+        max-width: 60%;
+        text-shadow: 2px 2px 2px black;
       }
     }
   }
