--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -15,6 +15,8 @@
   font-size: 24px;
   font-weight: normal;
   font-style: normal;
+
+  transition-duration: 250ms;
 }
 
 body {
@@ -35,3 +37,4 @@ body {
     }
   }
 }
+
