restructuration du projet

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,43 +1,1 @@
-@font-face {
-  font-family: "Montserrat-Medium";
-  src: url("/src/assets/fonts/Montserrat/static/Montserrat-Medium.ttf") format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-/* line 11, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/index.scss */
-* {
-  color: #FF6060;
-  font-family: Montserrat-Medium, serif;
-  text-decoration: none;
-  font-size: 24px;
-  font-weight: normal;
-  font-style: normal;
-  transition-duration: 250ms;
-}
-
-/* line 22, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/index.scss */
-body {
-  margin: 0;
-}
-
-/* line 25, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/index.scss */
-body div#root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
-
-/* line 30, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/index.scss */
-body div#root header,
-body div#root section {
-  width: 90%;
-  margin: auto;
-}
-
-/* line 35, ../../Nextcloud/Administratif/Social/Gualandi Stefan/alternance/partageMentor/projet11/kasa/src/styles/sass/index.scss */
-body div#root section {
-  flex-grow: 1;
-}
-
-/*# sourceMappingURL=index.css.map */
+@font-face{font-family:"Montserrat-Medium";src:url("/src/assets/fonts/Montserrat/static/Montserrat-Medium.ttf") format("truetype");font-weight:normal;font-style:normal}*{color:#FF6060;font-family:Montserrat-Medium, serif;text-decoration:none;font-size:24px;font-weight:normal;font-style:normal;transition-duration:250ms}body{margin:0}body div#root{min-height:100vh;display:flex;flex-direction:column}body div#root header,body div#root section{width:90%;margin:auto}body div#root section{flex-grow:1}
