Re resrtucturation du projet + avancée ficheLogement + revisionl cardLogement

--- a/src/styles/sass/responsive.scss
+++ b/src/styles/sass/responsive.scss
@@ -56,6 +56,10 @@
     }
   }
 
+  section#about div.listeDeroulante{
+    width: 100%;
+  }
+
   footer p {
     font-size: 12px;
     max-width: 150px;
