--- a/src/styles/sass/index.scss
+++ b/src/styles/sass/index.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: "Montserrat-Medium";
-  src: url('/src/assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
+  //src: url('./src/assets/fonts/Montserrat/static/Montserrat-Medium.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 
