--- a/src/components/ListeDeroulante/listeDeroulante.scss
+++ b/src/components/ListeDeroulante/listeDeroulante.scss
@@ -30,7 +30,7 @@ div.listeDeroulante{
   & > p.equipement{
     background-color: $gray;
     margin: 0;
-    color: $red;
+    color: $black;
     padding: 20px;
     font-size: 18px;
 
