--- a/src/layout/Header/header.scss
+++ b/src/layout/Header/header.scss
@@ -1,3 +1,5 @@
+@import "../../styles/sass/colors.scss";
+
 header {
   display: flex;
   justify-content: space-between;
@@ -9,6 +11,8 @@ header {
     display: flex;
 
     a{
+      color: $black;
+
       &:hover,
       &.selected{
         text-decoration: underline;
