--- a/src/styles/sass/responsive.scss
+++ b/src/styles/sass/responsive.scss
@@ -56,6 +56,14 @@
     }
   }
 
+  section#ficheLogement{
+    div.slider{
+      .numbertext{
+        display: none;
+      }
+    }
+  }
+
   section#about div.listeDeroulante{
     width: 100%;
   }
