--- a/src/components/ListeDeroulante/listeDeroulante.scss
+++ b/src/components/ListeDeroulante/listeDeroulante.scss
@@ -7,6 +7,7 @@ div.listeDeroulante{
   margin-top: 25px;
   border-radius: 5px;
   overflow: hidden;
+  text-align: left;
 
   & > p:not(.equipement){
     margin: 0;
