--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -26,6 +26,9 @@ div.slider{
   .prev:hover, .next:hover {
     background-color: rgba(0,0,0,0.8);
   }
+  .prev{
+    left: 0;
+  }
   .numbertext {
     color: #f2f2f2;
     padding: 8px 12px;
