--- a/src/pages/FicheLogement/FicheLogement.scss
+++ b/src/pages/FicheLogement/FicheLogement.scss
@@ -7,6 +7,10 @@ section#ficheLogement{
     display: inline-block;
   }
 
+  div.infosLogement{
+    max-width: 80%;
+  }
+
   div.description,
   div.equipement{
     width: 45%;
