--- a/src/styles/sass/responsive.scss
+++ b/src/styles/sass/responsive.scss
@@ -1,21 +1,90 @@
 @import "colors";
 
+@media screen and (max-width: 1112px) {
+  section#ficheLogement {
+    div.infosLogement {
+      max-width: 60%;
+    }
+  }
+}
+
+
+@media screen and (max-width: 1083px) {
+  section#home {
+    div.cardLogement {
+      width: 40%;
+    }
+  }
+}
+
+
+@media screen and (max-width: 750px) {
+
+  section#ficheLogement {
+
+    div.infosLogement {
+      max-width: unset;
+      text-align: left;
+
+      span.listeTags {
+        justify-content: left;
+        margin-bottom: 25px;
+        width: 100%;
+      }
+    }
+
+    div.infosLoueur {
+      text-align: right;
+      width: 100%;
+
+      p#rating {
+        float: left;
+      }
+    }
+
+    div.description,
+    div.equipement {
+      width: 100%;
+    }
+  }
+}
+
+
+@media screen and (max-width: 738px) {
+  section#home {
+    div#listeLogements {
+      div.cardLogement {
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
+}
+
+
 @media screen and (max-width: 700px) {
-  section#error{
-    h1{
+  section#error {
+    h1 {
       font-size: 96px;
     }
 
-    h2{
+    h2 {
       font-size: 18px;
       margin: 70px 0;
     }
 
-    a{
+    a {
       font-size: 14px;
     }
   }
+
+  section#about {
+    div.listeDeroulante {
+      width: 100%;
+    }
+  }
 }
+
 
 @media screen and (max-width: 525px) {
   header,
@@ -45,31 +114,48 @@
         text-align: left;
       }
     }
-    div#listeLogements{
+
+    div#listeLogements {
       padding: 22px 0;
       gap: 20px;
       background-color: $transparent;
 
-      div.cardLogement{
+      div.cardLogement {
         width: 100%;
       }
     }
   }
 
-  section#ficheLogement{
-    div.slider{
-      .numbertext{
+  section#ficheLogement {
+    div.slider {
+      .numbertext {
         display: none;
       }
     }
   }
 
-  section#about div.listeDeroulante{
-    width: 100%;
-  }
-
   footer p {
     font-size: 12px;
     max-width: 150px;
+  }
+}
+
+
+@media screen and (max-width: 450px) {
+  section#ficheLogement{
+    div.infosLoueur{
+      text-align: center;
+      float: none;
+
+      & > p:nth-child(1) {
+        max-width: 80%;
+      }
+
+      p#rating {
+        width: 100%;
+        justify-content: space-evenly;
+        margin-top: 15px;
+      }
+    }
   }
 }
